Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51108

Invalid month index returned by model

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.1
    • 5.6.0 RC
    • Quick: Controls 2
    • None
    • 32990fc8c58f7271bceff5a4e9da2c73642048f1

      It seems, month index, returned by CalendarModel is wrong. it returns it in range 1-12, bu it should be in range 0-11

        For Gerrit Dashboard: QTBUG-51108
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            vladest Vlad Stelmahovsky
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes