Fix CalendarModel month indices

Change-Id: I25c683cce19436d103d3225ad098daedf6212b64
Task-number: QTBUG-51108
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>